# Trading-Platform

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_backtest_engine.py  test_backtest_metrics.py  test_backtest_portfolio.py  test_backtest_report.py  test_backtest_risk.py  test_backtest_step_bar.py  test_feature_compute.py  test_feature_indicators.py  test_risk_evaluator.py  test_risk_ledger.py  test_risk_policy.py  test_risk_sizing.py  test_trend_rotation.py
