[project]
name = "ai-trading-system"
version = "0.1.0"
description = "Research-only crypto backtesting & risk engine. No live trading."
requires-python = ">=3.12"
# The published subset (feature-engine, backtest, risk-engine, strategy-engine) is
# pure standard library — it has no runtime third-party dependencies. The private
# system additionally uses ccxt / FastAPI / SQLAlchemy for data ingestion, the API,
# and persistence; those layers are intentionally not part of this showcase.
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/feature-engine/src/feature_engine",
  "packages/backtest/src/backtest",
  "packages/risk-engine/src/risk_engine",
  "packages/strategy-engine/src/strategy_engine",
]
dev-mode-dirs = [
  "packages/feature-engine/src",
  "packages/backtest/src",
  "packages/risk-engine/src",
  "packages/strategy-engine/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/feature-engine/src",
  "packages/backtest/src",
  "packages/risk-engine/src",
  "packages/strategy-engine/src",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
  "packages/feature-engine/src",
  "packages/backtest/src",
  "packages/risk-engine/src",
  "packages/strategy-engine/src",
]
